--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "dauntbooks",
   "version": "0.1.0",
   "private": true,
+ 
+ "engines": {
+  "node": ">=20.14.0",
+  "npm" : ">=10.7.0"
+ },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
