--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "dauntbooks",
   "version": "0.1.0",
   "private": true,
- 
- "engines": {
-  "node": ">=20.14.0",
-  "npm" : ">=10.7.0"
- },
+  "engines": {
+    "node": ">=20.14.0",
+    "npm": ">=10.7.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,7 +17,8 @@
     "@heroicons/react": "^2.1.3",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
