--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.15",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
