fix build issue

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,13 @@
       "@utils/*": ["utils/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "jest.config.js", ".eslintrc.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "jest.config.js",
+    ".eslintrc.js"
+  ],
   "exclude": ["node_modules"]
 }
